build/00013/Generic_ESP01S_esp32s3.log
Processing esp32s3 (board: esp32-s3-devkitc-1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (55.3.35) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting Generic_ESP01S.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.10+sha.9125640
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.8+sha.b12de62
Building in release mode
Compiling .pio/build/esp32s3/src/Generic_ESP01S.ino.cpp.o
/home/runner/work/h4plugins/h4plugins/build/esp32s3/src/Generic_ESP01S.ino:12:57: error: no matching function for call to 'H4P_RemoteUpdate::H4P_RemoteUpdate(const char [24], const char [75])'
   12 | H4P_RemoteUpdate h4ru("192.168.1.4:1880/update",__FILE__);
      |                                                         ^
In file included from .pio/libdeps/esp32s3/H4Plugins/src/H4Plugins.h:29,
                 from /home/runner/work/h4plugins/h4plugins/build/esp32s3/src/Generic_ESP01S.ino:4:
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:80:9: note: candidate: 'H4P_RemoteUpdate::H4P_RemoteUpdate(const std::string&)'
   80 |         H4P_RemoteUpdate(const std::string& url=""): H4Service("rupd",H4PE_VIEWERS){
      |         ^~~~~~~~~~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:80:9: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:24:7: note: candidate: 'H4P_RemoteUpdate::H4P_RemoteUpdate(const H4P_RemoteUpdate&)'
   24 | class H4P_RemoteUpdate: public H4Service, public HTTPUpdate {
      |       ^~~~~~~~~~~~~~~~
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:24:7: note:   candidate expects 1 argument, 2 provided
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:24:7: note: candidate: 'H4P_RemoteUpdate::H4P_RemoteUpdate(H4P_RemoteUpdate&&)'
.pio/libdeps/esp32s3/H4Plugins/src/H4P_RemoteUpdate.h:24:7: note:   candidate expects 1 argument, 2 provided
*** [.pio/build/esp32s3/src/Generic_ESP01S.ino.cpp.o] Error 1
========================== [FAILED] Took 9.32 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32s3        FAILED    00:00:09.319
==================== 1 failed, 0 succeeded in 00:00:09.319 ====================